--- a/pages/3040.html
+++ b/pages/3040.html
@@ -258,8 +258,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -294,7 +294,7 @@ margin-left: 0em;
     <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
     <a href="/nlab/all_pages" accesskey="A" title="List of all pages">All Pages</a> |
     <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
-    <a href="https://nforum.ncatlab.org/discussions/?CategoryID=0" title="Discuss this page on the nForum. It does not yet have a dedicated thread; feel free to create one, giving it the same name as the title of this page" style="color:black">Discuss this page</a> |
+    <a href="https://nforum.ncatlab.org/discussion/8972/#Item_1" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
     <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
@@ -309,9 +309,9 @@ margin-left: 0em;
 
 <div id="revision">
     <html xmlns="http://www.w3.org/1999/xhtml" xmlns:svg="http://www.w3.org/2000/svg" xml:lang="en" lang="en">
-<head><meta http-equiv="Content-type" content="application/xhtml+xml;charset=utf-8" /><title>REcent papers including preprints</title></head>
+<head><meta http-equiv="Content-type" content="application/xhtml+xml;charset=utf-8" /><title>Some papers including preprints</title></head>
 <body>
-<p>Stephen Lack (commonly known as ‘Steve’) is an Australian <a class="existingWikiWord" href="/nlab/show/category+theory">category theorist</a> with notable contributions to <a class="existingWikiWord" href="/nlab/show/2-category+theory">2-category theory</a>.</p>
+<p>Stephen Lack (commonly known as ‘Steve’) is an Australian <a class="existingWikiWord" href="/nlab/show/category+theory">category theorist</a> with notable contributions to <a class="existingWikiWord" href="/nlab/show/2-category+theory">2-category theory</a> and the theory of <a class="existingWikiWord" href="/nlab/show/monoidal+categories">monoidal categories</a>.</p>
 
 <p>He was winner of <a href="http://www.austms.org.au/The+Australian+Mathematical+Society+Medal">The Australian Mathematical Society Medal</a> for 2009.</p>
 
@@ -321,7 +321,7 @@ margin-left: 0em;
 <li><a href="http://maths.mq.edu.au/~slack/">Homepage</a> of Steve Lack.</li>
 </ul>
 
-<h2 id="recent_papers_including_preprints">REcent papers including preprints</h2>
+<h2 id="some_papers_including_preprints">Some papers including preprints</h2>
 
 <ul>
 <li>
@@ -333,27 +333,27 @@ margin-left: 0em;
 </li>
 
 <li>
-<p>Stephen Lack, Operadic categories and their skew monoidal categories of collec- tions, Higher Structures, accepted 30 July 2017, 29 pages; available as arXiv:1610.0628.</p>
+<p>Stephen Lack, Operadic categories and their skew monoidal categories of collections, Higher Structures, accepted 30 July 2017, 29 pages; available as arXiv:1610.0628.</p>
 </li>
 
 <li>
-<p>Gabriella BÆohm, Stephen Lack, and Jos ́e G ́omez-Torrecillas, Weak multiplier bi- monoids, Applied Categorical Structures, 65 pages, published online; also available as arXiv:1603.05702.</p>
+<p><a class="existingWikiWord" href="/nlab/show/Gabriella+Bohm">Gabriella Böhm</a>, Stephen Lack, and José Gómez-Torrecillas, Weak multiplier bi- monoids, Applied Categorical Structures, 65 pages, published online; also available as arXiv:1603.05702.</p>
 </li>
 
 <li>
-<p>Richard Garner, Stephen Lack, and Paul Slevin, Hochschild homology, lax codes- cent, and duplicial structure, Annals of K-theory, 3(1):1–31, 2018; also available as arXiv:1510.08925.</p>
+<p>Richard Garner, Stephen Lack, and Paul Slevin, Hochschild homology, lax codescent, and duplicial structure, Annals of K-theory, 3(1):1–31, 2018; also available as arXiv:1510.08925.</p>
 </li>
 
 <li>
-<p>Gabriella B ̈ohm and Stephen Lack, A simplicial approach to multiplier bimonoids, Bulletin of the Belgian Mathematical Society - Simon Stevin, 24:107–122, 2017.</p>
+<p>Gabriella Böhm and Stephen Lack, A simplicial approach to multiplier bimonoids, Bulletin of the Belgian Mathematical Society - Simon Stevin, 24:107–122, 2017.</p>
 </li>
 
 <li>
-<p>Gabriella B ̈ohm and Stephen Lack, Multiplier Hopf monoids, Algebras and Repre- sentation Theory, 20(1):1–46, 2017; also available as arXiv:1511.03806.</p>
+<p>Gabriella Böhm and Stephen Lack, Multiplier Hopf monoids, Algebras and Representation Theory, 20(1):1–46, 2017; also available as arXiv:1511.03806.</p>
 </li>
 
 <li>
-<p>Gabriella B ̈ohm and Stephen Lack, A category of multiplier bimonoids, Applied Categorical Structures, 25(2):279–301, 2017; and available as arXiv:1509.07171.</p>
+<p>Gabriella Böhm and Stephen Lack, A category of multiplier bimonoids, Applied Categorical Structures, 25(2):279–301, 2017; and available as arXiv:1509.07171.</p>
 </li>
 </ul>
 <div class="property">category: <a class="category_link" href="/nlab/all_pages/people">people</a></div></body></html>
@@ -362,7 +362,7 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on September 11, 2018 at 04:57:43.
+  Last revised on September 11, 2018 at 05:13:29.
   See the <a href="https://ncatlab.org/nlab/history/Stephen Lack" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
