--- a/pages/17004.html
+++ b/pages/17004.html
@@ -884,14 +884,14 @@ margin-left: 0em;
 </div>
 
 <h1 id="contents">Contents</h1>
-<div class="maruku_toc"><ul><li><a href="#idea">Idea</a></li><li><a href="#properties">Properties</a><ul><li><a href="#AsAlgebraicKTheoryOverTheFieldWithOneElement">As algebraic K-theory over the field with one element</a></li><li><a href="#kahnpriddy_theorem">Kahn-Priddy theorem</a></li></ul></li><li><a href="#related_concepts">Related concepts</a></li><li><a href="#references">References</a></li></ul></div>
+<div class="maruku_toc"><ul><li><a href="#idea">Idea</a></li><li><a href="#properties">Properties</a><ul><li><a href="#AsAlgebraicKTheoryOverTheFieldWithOneElement">As algebraic K-theory over <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msub><mi>𝔽</mi> <mn>1</mn></msub></mrow><annotation encoding="application/x-tex">\mathbb{F}_1</annotation></semantics></math></a></li><li><a href="#kahnpriddy_theorem">Kahn-Priddy theorem</a></li></ul></li><li><a href="#related_concepts">Related concepts</a></li><li><a href="#references">References</a></li></ul></div>
 <h2 id="idea">Idea</h2>
 
 <p>The <a class="existingWikiWord" href="/nlab/show/generalized+cohomology+theory">generalized cohomology theory</a> which is <a class="existingWikiWord" href="/nlab/show/Brown+representability+theorem">represented</a> by the <a class="existingWikiWord" href="/nlab/show/sphere+spectrum">sphere spectrum</a> is also called <em>stable cohomotopy</em>, as it is the <a class="existingWikiWord" href="/nlab/show/stable+homotopy+theory">stable homotopy theory</a> version of <a class="existingWikiWord" href="/nlab/show/cohomotopy">cohomotopy</a>.</p>
 
 <h2 id="properties">Properties</h2>
 
-<h3 id="AsAlgebraicKTheoryOverTheFieldWithOneElement">As algebraic K-theory over the field with one element</h3>
+<h3 id="AsAlgebraicKTheoryOverTheFieldWithOneElement">As algebraic K-theory over <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msub><mi>𝔽</mi> <mn>1</mn></msub></mrow><annotation encoding="application/x-tex">\mathbb{F}_1</annotation></semantics></math></h3>
 
 <div class="num_prop" id="StableCohomotopyIsKTheoryOfFinSet">
 <h6 id="proposition">Proposition</h6>
@@ -965,6 +965,18 @@ margin-left: 0em;
 <li id="Priddy73"><a class="existingWikiWord" href="/nlab/show/Stewart+Priddy">Stewart Priddy</a>, <em>Transfer, symmetric groups, and stable homotopy theory</em>, in <em>Higher K-Theories</em>, Springer, Berlin, Heidelberg, 1973. 244-255 (<a href="https://link.springer.com/content/pdf/10.1007/BFb0067060.pdf">pdf</a>)</li>
 </ul>
 
+<p>The resulting interpretation of stable cohomotopy as <a class="existingWikiWord" href="/nlab/show/algebraic+K-theory">algebraic K-theory</a> over the <a class="existingWikiWord" href="/nlab/show/field+with+one+element">field with one element</a> is amplified in the following articles:</p>
+
+<ul>
+<li id="Deitmar06">
+<p><a class="existingWikiWord" href="/nlab/show/Anton+Deitmar">Anton Deitmar</a>, <em>Remarks on zeta functions and K-theory over <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msub><mi>𝔽</mi> <mn>1</mn></msub></mrow><annotation encoding="application/x-tex">\mathbb{F}_1</annotation></semantics></math></em> (<a href="https://arxiv.org/abs/math/0605429">arXiv:math/0605429</a>)</p>
+</li>
+
+<li id="Guillot06">
+<p><a class="existingWikiWord" href="/nlab/show/Pierre+Guillot">Pierre Guillot</a>, <em>Adams operations in cohomotopy</em> (<a href="https://arxiv.org/abs/math/0612327">arXiv:0612327</a>)</p>
+</li>
+</ul>
+
 <p>The <a class="existingWikiWord" href="/nlab/show/Kahn-Priddy+theorem">Kahn-Priddy theorem</a> is due to</p>
 
 <ul>
@@ -988,14 +1000,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on September 11, 2018 at 04:35:58.
+  Last revised on September 11, 2018 at 05:45:24.
   See the <a href="https://ncatlab.org/nlab/history/stable cohomotopy" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/stable+cohomotopy" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/stable+cohomotopy/4" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(4 revisions)</span> | <a href="/nlab/show/diff/stable+cohomotopy" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/stable+cohomotopy" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/stable+cohomotopy" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/stable+cohomotopy/5" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(5 revisions)</span> | <a href="/nlab/show/diff/stable+cohomotopy" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/stable+cohomotopy" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/stable cohomotopy/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
