--- a/pages/2677.html
+++ b/pages/2677.html
@@ -258,8 +258,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -294,7 +294,7 @@ margin-left: 0em;
     <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
     <a href="/nlab/all_pages" accesskey="A" title="List of all pages">All Pages</a> |
     <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
-    <a href="https://nforum.ncatlab.org/discussion/260/#Item_24" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
+    <a href="https://nforum.ncatlab.org/discussion/260/#Item_28" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
     <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
@@ -564,7 +564,7 @@ margin-left: 0em;
 
 <h3 id="algebraic_ktheory">Algebraic K-theory</h3>
 
-<p>With the identification <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msub><mi>𝔽</mi> <mn>1</mn></msub><mi>Mod</mi><mo>≃</mo><msup><mi>FinSet</mi> <mrow><mo>*</mo><mo stretchy="false">/</mo></mrow></msup></mrow><annotation encoding="application/x-tex">\mathbb{F}_1 Mod \simeq FinSet^{\ast/}</annotation></semantics></math> it follows that the <a class="existingWikiWord" href="/nlab/show/algebraic+K-theory">algebraic K-theory</a> over <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msub><mi>𝔽</mi> <mn>1</mn></msub></mrow><annotation encoding="application/x-tex">\mathbb{F}_1</annotation></semantics></math> is <a class="existingWikiWord" href="/nlab/show/stable+cohomotopy">stable cohomotopy</a></p>
+<p>With the identification <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msub><mi>𝔽</mi> <mn>1</mn></msub><mi>Mod</mi><mo>≃</mo><msup><mi>FinSet</mi> <mrow><mo>*</mo><mo stretchy="false">/</mo></mrow></msup></mrow><annotation encoding="application/x-tex">\mathbb{F}_1 Mod \simeq FinSet^{\ast/}</annotation></semantics></math> from <a href="#Modules">above</a> it follows that the <a class="existingWikiWord" href="/nlab/show/algebraic+K-theory">algebraic K-theory</a> over <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msub><mi>𝔽</mi> <mn>1</mn></msub></mrow><annotation encoding="application/x-tex">\mathbb{F}_1</annotation></semantics></math> is <em><a class="existingWikiWord" href="/nlab/show/stable+cohomotopy">stable cohomotopy</a></em>:</p>
 <div class="maruku-equation"><math xmlns="http://www.w3.org/1998/Math/MathML" display="block" class="maruku-mathml"><semantics><mrow><mrow><mtable displaystyle="true" columnalign="right left right left right left right left right left" columnspacing="0em"><mtr><mtd><mi>K</mi><msub><mi>𝔽</mi> <mn>1</mn></msub></mtd> <mtd><mo>≔</mo><mspace width="thickmathspace"></mspace><mi>K</mi><mo stretchy="false">(</mo><msub><mi>𝔽</mi> <mn>1</mn></msub><mi>Mod</mi><mo stretchy="false">)</mo></mtd></mtr> <mtr><mtd></mtd> <mtd><mo>≃</mo><mspace width="thickmathspace"></mspace><mi>K</mi><mo stretchy="false">(</mo><mi>FinSet</mi><mo stretchy="false">)</mo></mtd></mtr> <mtr><mtd></mtd> <mtd><mo>≃</mo><mi>𝕊</mi></mtd></mtr></mtable></mrow><mspace width="thinmathspace"></mspace><mo>.</mo></mrow><annotation encoding="application/x-tex">
   \begin{aligned}
     K \mathbb{F}_1
@@ -722,6 +722,8 @@ margin-left: 0em;
 
 <h3 id="relation_to_stable_homotopy_theory">Relation to stable homotopy theory</h3>
 
+<p>The interpretation of <a class="existingWikiWord" href="/nlab/show/stable+cohomotopy">stable cohomotopy</a> as <a class="existingWikiWord" href="/nlab/show/algebraic+K-theory">algebraic K-theory</a> over <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msub><mi>𝔽</mi> <mn>1</mn></msub></mrow><annotation encoding="application/x-tex">\mathbb{F}_1</annotation></semantics></math> is amplified in the following articles:</p>
+
 <ul>
 <li id="Deitmar06">
 <p><a class="existingWikiWord" href="/nlab/show/Anton+Deitmar">Anton Deitmar</a>, <em>Remarks on zeta functions and K-theory over <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msub><mi>𝔽</mi> <mn>1</mn></msub></mrow><annotation encoding="application/x-tex">\mathbb{F}_1</annotation></semantics></math></em> (<a href="https://arxiv.org/abs/math/0605429">arXiv:math/0605429</a>)</p>
@@ -737,14 +739,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on September 11, 2018 at 04:24:20.
+  Last revised on September 11, 2018 at 05:44:30.
   See the <a href="https://ncatlab.org/nlab/history/field with one element" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/field+with+one+element" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/field+with+one+element/36" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(36 revisions)</span> | <a href="/nlab/show/diff/field+with+one+element" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/field+with+one+element" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/field+with+one+element" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/field+with+one+element/37" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(37 revisions)</span> | <a href="/nlab/show/diff/field+with+one+element" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/field+with+one+element" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/field with one element/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
