--- a/pages/17004.html
+++ b/pages/17004.html
@@ -294,7 +294,7 @@ margin-left: 0em;
     <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
     <a href="/nlab/all_pages" accesskey="A" title="List of all pages">All Pages</a> |
     <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
-    <a href="https://nforum.ncatlab.org/discussion/8970/#Item_1" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
+    <a href="https://nforum.ncatlab.org/discussion/8970/#Item_2" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
     <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
@@ -934,7 +934,10 @@ margin-left: 0em;
 </annotation></semantics></math></div>
 <p>This perspective is highlighted for instance in (<a href="#Deitmar06">Deitmar 06, p. 2</a>, <a href="#Guillot06">Guillot 06</a>).</p>
 </div>
-
+<table><thead><tr><th>(<a class="existingWikiWord" href="/nlab/show/equivariant+cohomology">equivariant</a>) <a class="existingWikiWord" href="/nlab/show/generalized+%28Eilenberg-Steenrod%29+cohomology">cohomology</a></th><th><a class="existingWikiWord" href="/nlab/show/Brown+representability+theorem">representing</a> <br /> <a class="existingWikiWord" href="/nlab/show/spectrum">spectrum</a></th><th><a class="existingWikiWord" href="/nlab/show/equivariant+cohomology">equivariant cohomology</a> <br /> of the <a class="existingWikiWord" href="/nlab/show/point">point</a> <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mo>*</mo></mrow><annotation encoding="application/x-tex">\ast</annotation></semantics></math></th><th><a class="existingWikiWord" href="/nlab/show/generalized+%28Eilenberg-Steenrod%29+cohomology">cohomology</a> <br /> of <a class="existingWikiWord" href="/nlab/show/classifying+space">classifying space</a> <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>B</mi><mi>G</mi></mrow><annotation encoding="application/x-tex">B G</annotation></semantics></math></th></tr></thead><tbody><tr><td style="text-align: left;">(<a class="existingWikiWord" href="/nlab/show/equivariant+K-theory">equivariant</a>) <br /> <a class="existingWikiWord" href="/nlab/show/complex+K-theory">complex K-theory</a></td><td style="text-align: left;"><a class="existingWikiWord" href="/nlab/show/KU">KU</a></td><td style="text-align: left;"><a class="existingWikiWord" href="/nlab/show/representation+ring">representation ring</a> <br /> <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msub><mi>KU</mi> <mi>G</mi></msub><mo stretchy="false">(</mo><mo>*</mo><mo stretchy="false">)</mo><mo>≃</mo><msub><mi>R</mi> <mi>ℂ</mi></msub><mo stretchy="false">(</mo><mi>G</mi><mo stretchy="false">)</mo></mrow><annotation encoding="application/x-tex">KU_G(\ast) \simeq R_{\mathbb{C}}(G)</annotation></semantics></math></td><td style="text-align: left;"><a class="existingWikiWord" href="/nlab/show/Atiyah-Segal+completion+theorem">Atiyah-Segal completion theorem</a> <br /> <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>R</mi><mo stretchy="false">(</mo><mi>G</mi><mo stretchy="false">)</mo><mo>≃</mo><msub><mi>𝕂𝕌</mi> <mi>G</mi></msub><mo stretchy="false">(</mo><mo>*</mo><mo stretchy="false">)</mo><mover><mo>⟶</mo><mtext>compl.</mtext></mover><mover><mrow><msub><mi>𝕂𝕌</mi> <mi>G</mi></msub><mo stretchy="false">(</mo><mo>*</mo><mo stretchy="false">)</mo></mrow><mo>^</mo></mover><mo>≃</mo><mi>𝕂𝕌</mi><mo stretchy="false">(</mo><mi>B</mi><mi>G</mi><mo stretchy="false">)</mo></mrow><annotation encoding="application/x-tex">R(G) \simeq  \mathbb{KU}_G(\ast)  \overset{ \text{compl.} }{\longrightarrow} \widehat {\mathbb{KU}_G(\ast)}  \simeq \mathbb{KU}(B G)</annotation></semantics></math></td></tr>
+<tr><td style="text-align: left;">(<a class="existingWikiWord" href="/nlab/show/equivariant+K-theory">equivariant</a>) <br /> <a class="existingWikiWord" href="/nlab/show/algebraic+K-theory">algebraic K-theory</a></td><td style="text-align: left;"><math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>K</mi><msub><mi>𝔽</mi> <mi>p</mi></msub></mrow><annotation encoding="application/x-tex">K \mathbb{F}_p</annotation></semantics></math></td><td style="text-align: left;"><a class="existingWikiWord" href="/nlab/show/representation+ring">representation ring</a> <br /> <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mo stretchy="false">(</mo><mi>K</mi><msub><mi>𝔽</mi> <mi>p</mi></msub><msub><mo stretchy="false">)</mo> <mi>G</mi></msub><mo stretchy="false">(</mo><mo>*</mo><mo stretchy="false">)</mo><mo>≃</mo><msub><mi>R</mi> <mi>p</mi></msub><mo stretchy="false">(</mo><mi>G</mi><mo stretchy="false">)</mo></mrow><annotation encoding="application/x-tex">(K \mathbb{F}_p)_G(\ast) \simeq R_p(G)</annotation></semantics></math></td><td style="text-align: left;"><a class="existingWikiWord" href="/nlab/show/Rector+completion+theorem">Rector completion theorem</a> <br /> <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msub><mi>R</mi> <mrow><msub><mi>𝔽</mi> <mi>p</mi></msub></mrow></msub><mo stretchy="false">(</mo><mi>G</mi><mo stretchy="false">)</mo><mo>≃</mo><mi>K</mi><mo stretchy="false">(</mo><msub><mi>𝔽</mi> <mi>p</mi></msub><msub><mo stretchy="false">)</mo> <mi>G</mi></msub><mo stretchy="false">(</mo><mo>*</mo><mo stretchy="false">)</mo><mover><mo>⟶</mo><mtext>compl.</mtext></mover><mover><mrow><mo stretchy="false">(</mo><mi>K</mi><msub><mi>𝔽</mi> <mi>p</mi></msub><msub><mo stretchy="false">)</mo> <mi>G</mi></msub><mo stretchy="false">(</mo><mo>*</mo><mo stretchy="false">)</mo></mrow><mo>^</mo></mover><mspace width="negativethinmathspace"></mspace><mspace width="negativethinmathspace"></mspace><mover><mo>≃</mo><mtext><a href="https://ncatlab.org/nlab/show/Rector+completion+theorem">Rector 73</a></mtext></mover><mspace width="negativethinmathspace"></mspace><mspace width="negativethinmathspace"></mspace><mspace width="negativethinmathspace"></mspace><mspace width="negativethinmathspace"></mspace><mspace width="negativethinmathspace"></mspace><mspace width="negativethinmathspace"></mspace><mi>K</mi><msub><mi>𝔽</mi> <mi>p</mi></msub><mo stretchy="false">(</mo><mi>B</mi><mi>G</mi><mo stretchy="false">)</mo></mrow><annotation encoding="application/x-tex">R_{\mathbb{F}_p}(G) \simeq  K (\mathbb{F}_p)_G(\ast)  \overset{ \text{compl.} }{\longrightarrow} \widehat {(K \mathbb{F}_p)_G(\ast)} \!\! \overset{\text{&lt;a href="https://ncatlab.org/nlab/show/Rector+completion+theorem"&gt;Rector 73&lt;/a&gt;}}{\simeq} \!\!\!\!\!\! K \mathbb{F}_p(B G) </annotation></semantics></math> <br /></td></tr>
+<tr><td style="text-align: left;">(<a class="existingWikiWord" href="/nlab/show/equivariant+stable+cohomotopy">equivariant</a>) <br /> <a class="existingWikiWord" href="/nlab/show/stable+cohomotopy">stable cohomotopy</a></td><td style="text-align: left;">K <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msub><mi>𝔽</mi> <mn>1</mn></msub><mover><mo>≃</mo><mtext><a href="stable cohomotopy#StableCohomotopyIsAlgebraicKTheoryOverFieldWithOneElement">Segal 74</a></mtext></mover></mrow><annotation encoding="application/x-tex">\mathbb{F}_1 \overset{\text{&lt;a href="stable cohomotopy#StableCohomotopyIsAlgebraicKTheoryOverFieldWithOneElement"&gt;Segal 74&lt;/a&gt;}}{\simeq} </annotation></semantics></math> <a class="existingWikiWord" href="/nlab/show/equivariant+sphere+spectrum">S</a></td><td style="text-align: left;"><a class="existingWikiWord" href="/nlab/show/Burnside+ring">Burnside ring</a> <br /> <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msub><mi>𝕊</mi> <mi>G</mi></msub><mo stretchy="false">(</mo><mo>*</mo><mo stretchy="false">)</mo><mo>≃</mo><mi>A</mi><mo stretchy="false">(</mo><mi>G</mi><mo stretchy="false">)</mo></mrow><annotation encoding="application/x-tex">\mathbb{S}_G(\ast) \simeq A(G)</annotation></semantics></math></td><td style="text-align: left;"><a class="existingWikiWord" href="/nlab/show/Segal-Carlsson+completion+theorem">Segal-Carlsson completion theorem</a> <br /> <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>A</mi><mo stretchy="false">(</mo><mi>G</mi><mo stretchy="false">)</mo><mover><mo>≃</mo><mtext><a href="https://ncatlab.org/nlab/show/Burnside+ring+is+equivariant+stable+cohomotopy+of+the+point">Segal 71</a></mtext></mover><msub><mi>𝕊</mi> <mi>G</mi></msub><mo stretchy="false">(</mo><mo>*</mo><mo stretchy="false">)</mo><mover><mo>⟶</mo><mtext>compl.</mtext></mover><mover><mrow><msub><mi>𝕊</mi> <mi>G</mi></msub><mo stretchy="false">(</mo><mo>*</mo><mo stretchy="false">)</mo></mrow><mo>^</mo></mover><mspace width="negativethinmathspace"></mspace><mspace width="negativethinmathspace"></mspace><mover><mo>≃</mo><mtext><a href="https://ncatlab.org/nlab/show/Segal-Carlsson+completion+theorem">Carlsson 84</a></mtext></mover><mspace width="negativethinmathspace"></mspace><mspace width="negativethinmathspace"></mspace><mspace width="negativethinmathspace"></mspace><mspace width="negativethinmathspace"></mspace><mspace width="negativethinmathspace"></mspace><mspace width="negativethinmathspace"></mspace><mi>𝕊</mi><mo stretchy="false">(</mo><mi>B</mi><mi>G</mi><mo stretchy="false">)</mo></mrow><annotation encoding="application/x-tex">A(G) \overset{\text{&lt;a href="https://ncatlab.org/nlab/show/Burnside+ring+is+equivariant+stable+cohomotopy+of+the+point"&gt;Segal 71&lt;/a&gt;}}{\simeq}  \mathbb{S}_G(\ast)  \overset{ \text{compl.} }{\longrightarrow} \widehat {\mathbb{S}_G(\ast)} \!\! \overset{\text{&lt;a href="https://ncatlab.org/nlab/show/Segal-Carlsson+completion+theorem"&gt;Carlsson 84&lt;/a&gt;}}{\simeq} \!\!\!\!\!\! \mathbb{S}(B G) </annotation></semantics></math> <br /></td></tr>
+</tbody></table>
 <h3 id="kahnpriddy_theorem">Kahn-Priddy theorem</h3>
 
 <p>The <a class="existingWikiWord" href="/nlab/show/Kahn-Priddy+theorem">Kahn-Priddy theorem</a> characterizes a comparison map between stable cohomotopy and <a class="existingWikiWord" href="/nlab/show/cohomology">cohomology</a> with <a class="existingWikiWord" href="/nlab/show/coefficients">coefficients</a> in the infinite <a class="existingWikiWord" href="/nlab/show/real+projective+space">real projective space</a> <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>ℝ</mi><msup><mi>P</mi> <mn>∞</mn></msup><mo>≃</mo><mi>B</mi><mi>ℤ</mi><mo stretchy="false">/</mo><mn>2</mn></mrow><annotation encoding="application/x-tex">\mathbb{R}P^\infty \simeq B \mathbb{Z}/2</annotation></semantics></math>.</p>
@@ -983,6 +986,38 @@ margin-left: 0em;
 <li id="KahnPriddy72"><a class="existingWikiWord" href="/nlab/show/Daniel+Kahn">Daniel Kahn</a>, <a class="existingWikiWord" href="/nlab/show/Stewart+Priddy">Stewart Priddy</a>, <em>Applications of the transfer to stable homotopy theory</em>, Bull. Amer. Math. Soc. Volume 78, Number 6 (1972), 981-987 (<a href="https://projecteuclid.org/euclid.bams/1183534135">Euclid</a>)</li>
 </ul>
 
+<p>The relation to <span class="newWikiWord">β-rings<a href="/nlab/new/%CE%B2-rings">?</a></span> is discussed in</p>
+
+<ul>
+<li>
+<p>E. Vallejo, <em>Polynomial operations from Burnside rings to representation functors</em>, J. Pure Appl. Algebra, 65 (1990), pp. 163–190.</p>
+</li>
+
+<li>
+<p>E. Vallejo, <em>Polynomial operations on stable cohomotopy</em>, Manuscripta Math., 67 (1990), pp. 345–365</p>
+</li>
+
+<li>
+<p>E. Vallejo, <em>The free β-ring on one generator, J. Pure Appl. Algebra, 86 (1993), pp. 95–108.</em></p>
+</li>
+
+<li>
+<p><a href="#Guillot06">Guillot 06</a></p>
+</li>
+</ul>
+
+<p>see also</p>
+
+<ul>
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/Jack+Morava">Jack Morava</a>, Rekha Santhanam, <em>Power operations and absolute geometry</em> (<a href="http://www.lemiller.net/media/slidesconf/AbsolutePower.pdf">pdf</a>)</p>
+</li>
+
+<li id="Berman18">
+<p>John D. Berman, p. 92 of <em>Categorified algebra and equivariant homotopy theory</em>, PhD thesis 2018 (<a href="http://www.people.virginia.edu/~jdb8pc/Thesis.pdf">pdf</a>)</p>
+</li>
+</ul>
+
 <p>A lift of <a class="existingWikiWord" href="/nlab/show/Seiberg-Witten+invariants">Seiberg-Witten invariants</a> to classes in <a class="existingWikiWord" href="/nlab/show/circle+group">circle group</a>-<a class="existingWikiWord" href="/nlab/show/equivariant+stable+cohomotopy">equivariant stable cohomotopy</a> is discussed in</p>
 
 <ul>
@@ -1000,14 +1035,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on September 11, 2018 at 05:45:24.
+  Last revised on September 11, 2018 at 06:59:51.
   See the <a href="https://ncatlab.org/nlab/history/stable cohomotopy" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/stable+cohomotopy" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/stable+cohomotopy/5" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(5 revisions)</span> | <a href="/nlab/show/diff/stable+cohomotopy" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/stable+cohomotopy" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/stable+cohomotopy" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/stable+cohomotopy/6" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(6 revisions)</span> | <a href="/nlab/show/diff/stable+cohomotopy" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/stable+cohomotopy" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/stable cohomotopy/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
