--- a/pages/6815.html
+++ b/pages/6815.html
@@ -660,6 +660,12 @@ margin-left: 0em;
 <li><a class="existingWikiWord" href="/nlab/show/Hisham+Sati">Hisham Sati</a>, <em><a class="existingWikiWord" href="/nlab/show/Geometric+and+topological+structures+related+to+M-branes">Geometric and topological structures related to M-branes</a></em>, 2010</li>
 </ul>
 
+<p>Discussion of <a class="existingWikiWord" href="/nlab/show/M-brane">M-brane</a> physics in terms of <a class="existingWikiWord" href="/nlab/show/equivariant+rational+homotopy+theory">rational equivariant</a> <a class="existingWikiWord" href="/nlab/show/cohomotopy">cohomotopy</a> is in</p>
+
+<ul>
+<li><a class="existingWikiWord" href="/nlab/show/John+Huerta">John Huerta</a>, <a class="existingWikiWord" href="/nlab/show/Hisham+Sati">Hisham Sati</a>, <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>, <em><a class="existingWikiWord" href="/schreiber/show/Equivariant+homotopy+and+super+M-branes">Real ADE-equivariant (co)homotopy and Super M-branes</a></em> (<a href="https://arxiv.org/abs/1805.05987">arXiv:1805.05987</a>)</li>
+</ul>
+
 <p>The <a class="existingWikiWord" href="/nlab/show/brane+intersection">brane intersection</a> laws of M-branes are discussed in</p>
 
 <ul>
@@ -693,14 +699,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on September 11, 2018 at 05:39:17.
+  Last revised on September 11, 2018 at 07:09:55.
   See the <a href="https://ncatlab.org/nlab/history/M-brane" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/M-brane" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/M-brane/13" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(13 revisions)</span> | <a href="/nlab/show/diff/M-brane" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/M-brane" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/M-brane" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/M-brane/14" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(14 revisions)</span> | <a href="/nlab/show/diff/M-brane" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/M-brane" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/M-brane/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
