--- a/pages/4815.html
+++ b/pages/4815.html
@@ -990,7 +990,7 @@ margin-left: 0em;
 
 <p>This means that apart from the freedom of choosing a classical comsological constant in the <a class="existingWikiWord" href="/nlab/show/Einstein-Hilbert+action">Einstein-Hilbert action</a> as above, its <a href="A+first+idea+of+quantum+field+theory#InteractingQuantumFields">perturbative quantization</a> (<a class="existingWikiWord" href="/nlab/show/perturbative+quantum+gravity">perturbative quantum gravity</a>) introduces <a class="existingWikiWord" href="/nlab/show/renormalization">renormalization</a> freedom to the value of the cosmological constant.</p>
 
-<p>The folklore discussion of the “cosmological constant problem” (see the references <a href="#CCProblemReferences">below</a>) tends not to take this freedom in the theory into account.</p>
+<p>The folklore discussion of the “cosmological constant problem” (see the references <a href="#CCProblemReferences">below</a>) tends not to take this freedom in the theory into account (see the discussion at <em><a class="existingWikiWord" href="/nlab/show/naturalness">naturalness</a></em>).</p>
 
 <h3 id="InInhomogeneousCosmology">In inhomogeneous cosmology</h3>
 
@@ -1223,14 +1223,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on September 10, 2018 at 08:45:32.
+  Last revised on September 11, 2018 at 11:04:04.
   See the <a href="https://ncatlab.org/nlab/history/cosmological constant" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/cosmological+constant" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/cosmological+constant/16" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(16 revisions)</span> | <a href="/nlab/show/diff/cosmological+constant" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/cosmological+constant" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/cosmological+constant" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/cosmological+constant/17" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(17 revisions)</span> | <a href="/nlab/show/diff/cosmological+constant" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/cosmological+constant" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/cosmological constant/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
