--- a/pages/19681.html
+++ b/pages/19681.html
@@ -3,7 +3,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
   <title>
-      trivial representation in nLab
+      alternating representation in nLab
   </title>
 
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
@@ -258,8 +258,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="https://www.ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="https://www.ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -284,7 +284,7 @@ margin-left: 0em;
         c9-9,20-18,33-22C159,52,166,54,170,60' />
     </svg></span>
       <span class="webName">nLab</span><br />
-      trivial representation
+      alternating representation
   </h1>
 
 
@@ -294,7 +294,7 @@ margin-left: 0em;
     <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
     <a href="/nlab/all_pages" accesskey="A" title="List of all pages">All Pages</a> |
     <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
-    <a href="https://nforum.ncatlab.org/discussions/?CategoryID=0" title="Discuss this page on the nForum. It does not yet have a dedicated thread; feel free to create one, giving it the same name as the title of this page" style="color:black">Discuss this page</a> |
+    <a href="https://nforum.ncatlab.org/discussion/8976/#Item_1" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
     <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
@@ -422,54 +422,65 @@ margin-left: 0em;
 </div>
 
 <h1 id="contents">Contents</h1>
-<div class="maruku_toc"><ul><li><a href="#definition">Definition</a></li><li><a href="#related_concepts">Related concepts</a></li></ul></div>
+<div class="maruku_toc"><ul><li><a href="#definition">Definition</a></li><li><a href="#related_concepts">Related concepts</a></li><li><a href="#references">References</a></li></ul></div>
 <h2 id="definition">Definition</h2>
 
-<p>A <a class="existingWikiWord" href="/nlab/show/representation">representation</a>/<a class="existingWikiWord" href="/nlab/show/action">action</a> <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>V</mi><mo>×</mo><mi>G</mi><mo>⟶</mo><mi>V</mi></mrow><annotation encoding="application/x-tex">V \times G \longrightarrow V</annotation></semantics></math> is <em>trivial</em> if it is given by the <a class="existingWikiWord" href="/nlab/show/projection">projection</a> out of the <a class="existingWikiWord" href="/nlab/show/product">product</a> onto <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>V</mi></mrow><annotation encoding="application/x-tex">V</annotation></semantics></math>.</p>
+<p>For <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msub><mi>S</mi> <mi>n</mi></msub></mrow><annotation encoding="application/x-tex">S_n</annotation></semantics></math> a <a class="existingWikiWord" href="/nlab/show/symmetric+group">symmetric group</a>, its <em>alternating representation</em> is the 1-<a class="existingWikiWord" href="/nlab/show/dimension">dimensional</a> <a class="existingWikiWord" href="/nlab/show/linear+representation">linear representation</a></p>
+<div class="maruku-equation"><math xmlns="http://www.w3.org/1998/Math/MathML" display="block" class="maruku-mathml"><semantics><mrow><mi>alt</mi><mspace width="thickmathspace"></mspace><mspace width="thickmathspace"></mspace><msub><mi>S</mi> <mi>n</mi></msub><mo>⟶</mo><mi>GL</mi><mo stretchy="false">(</mo><mn>1</mn><mo stretchy="false">)</mo></mrow><annotation encoding="application/x-tex">
+  alt \;\; S_n \longrightarrow GL(1)
+
+</annotation></semantics></math></div>
+<p>which sends even <a class="existingWikiWord" href="/nlab/show/permutations">permutations</a> to <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mo lspace="verythinmathspace" rspace="0em">+</mo><mn>1</mn></mrow><annotation encoding="application/x-tex">+1</annotation></semantics></math> and odd permutations to <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mo lspace="verythinmathspace" rspace="0em">−</mo><mn>1</mn></mrow><annotation encoding="application/x-tex">-1</annotation></semantics></math>.</p>
+
+<p>More generally, for <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>G</mi></mrow><annotation encoding="application/x-tex">G</annotation></semantics></math> any <a class="existingWikiWord" href="/nlab/show/finite+group">finite group</a> and <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>H</mi><mo>⊂</mo><mi>G</mi></mrow><annotation encoding="application/x-tex">H \subset G</annotation></semantics></math> a <a class="existingWikiWord" href="/nlab/show/subgroup">subgroup</a> of <a class="existingWikiWord" href="/nlab/show/index+of+a+subgroup">index</a> 2, then the corresponding alternating representation of <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>G</mi></mrow><annotation encoding="application/x-tex">G</annotation></semantics></math> sends elements of <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>H</mi></mrow><annotation encoding="application/x-tex">H</annotation></semantics></math> to <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mo lspace="verythinmathspace" rspace="0em">+</mo><mn>1</mn></mrow><annotation encoding="application/x-tex">+1</annotation></semantics></math> and all other elements to -1.</p>
+
+<p>This reduces to the previous special case by setting <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>G</mi><mo>≔</mo><msub><mi>S</mi> <mi>n</mi></msub></mrow><annotation encoding="application/x-tex">G \coloneqq S_n</annotation></semantics></math> and <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>H</mi><mo>≔</mo><msub><mi>A</mi> <mi>n</mi></msub><mo>⊂</mo><msub><mi>S</mi> <mi>n</mi></msub></mrow><annotation encoding="application/x-tex">H \coloneqq A_n \subset S_n</annotation></semantics></math> the <a class="existingWikiWord" href="/nlab/show/alternating+group">alternating group</a>.</p>
 
 <h2 id="related_concepts">Related concepts</h2>
 
 <ul>
 <li>
-<p><a class="existingWikiWord" href="/nlab/show/alternating+representation">alternating representation</a></p>
+<p><a class="existingWikiWord" href="/nlab/show/trivial+representation">trivial representation</a></p>
 </li>
 
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/regular+representation">regular representation</a></p>
 </li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/permutation+representation">permutation representation</a></p>
+</li>
 </ul>
-<p><strong><a class="existingWikiWord" href="/nlab/show/representation+theory">representation theory</a> and <a class="existingWikiWord" href="/nlab/show/equivariant+cohomology">equivariant cohomology</a> in terms of <a class="existingWikiWord" href="/nlab/show/%28%E2%88%9E%2C1%29-topos+theory">(∞,1)-topos theory</a>/<a class="existingWikiWord" href="/nlab/show/homotopy+type+theory">homotopy type theory</a></strong> (<a class="existingWikiWord" href="/schreiber/show/Principal+%E2%88%9E-bundles+--+theory%2C+presentations+and+applications">FSS 12 I, exmp. 4.4</a>):</p><table><thead><tr><th><a class="existingWikiWord" href="/nlab/show/homotopy+type+theory">homotopy type theory</a></th><th><a class="existingWikiWord" href="/nlab/show/representation+theory">representation theory</a></th></tr></thead><tbody><tr><td style="text-align: left;"><a class="existingWikiWord" href="/nlab/show/pointed+type">pointed</a> <a class="existingWikiWord" href="/nlab/show/connected+homotopy+type">connected</a> <a class="existingWikiWord" href="/nlab/show/context">context</a> <math xmlns="http://www.w3.org/1998/Math/MathML" class="maruku-mathml" display="inline" id="mathml_2561b5b414e14b079ff2a2b15fb469479a45220e_1"><semantics><mrow><mstyle mathvariant="bold"><mi>B</mi></mstyle><mi>G</mi></mrow><annotation encoding="application/x-tex">\mathbf{B}G</annotation></semantics></math></td><td style="text-align: left;"><a class="existingWikiWord" href="/nlab/show/%E2%88%9E-group">∞-group</a> <math xmlns="http://www.w3.org/1998/Math/MathML" class="maruku-mathml" display="inline" id="mathml_2561b5b414e14b079ff2a2b15fb469479a45220e_2"><semantics><mrow><mi>G</mi></mrow><annotation encoding="application/x-tex">G</annotation></semantics></math></td></tr>
-<tr><td style="text-align: left;"><a class="existingWikiWord" href="/nlab/show/dependent+type">dependent type</a></td><td style="text-align: left;"><a class="existingWikiWord" href="/nlab/show/%E2%88%9E-action">∞-action</a>/<a class="existingWikiWord" href="/nlab/show/%E2%88%9E-representation">∞-representation</a></td></tr>
-<tr><td style="text-align: left;"><a class="existingWikiWord" href="/nlab/show/dependent+sum">dependent sum</a> along <math xmlns="http://www.w3.org/1998/Math/MathML" class="maruku-mathml" display="inline" id="mathml_2561b5b414e14b079ff2a2b15fb469479a45220e_3"><semantics><mrow><mstyle mathvariant="bold"><mi>B</mi></mstyle><mi>G</mi><mo>→</mo><mo>*</mo></mrow><annotation encoding="application/x-tex">\mathbf{B}G \to \ast</annotation></semantics></math></td><td style="text-align: left;"><a class="existingWikiWord" href="/nlab/show/coinvariants">coinvariants</a>/<a class="existingWikiWord" href="/nlab/show/homotopy+quotient">homotopy quotient</a></td></tr>
-<tr><td style="text-align: left;"><a class="existingWikiWord" href="/nlab/show/context+extension">context extension</a> along <math xmlns="http://www.w3.org/1998/Math/MathML" class="maruku-mathml" display="inline" id="mathml_2561b5b414e14b079ff2a2b15fb469479a45220e_4"><semantics><mrow><mstyle mathvariant="bold"><mi>B</mi></mstyle><mi>G</mi><mo>→</mo><mo>*</mo></mrow><annotation encoding="application/x-tex">\mathbf{B}G \to \ast</annotation></semantics></math></td><td style="text-align: left;"><a class="existingWikiWord" href="/nlab/show/trivial+representation">trivial representation</a></td></tr>
-<tr><td style="text-align: left;"><a class="existingWikiWord" href="/nlab/show/dependent+product">dependent product</a> along <math xmlns="http://www.w3.org/1998/Math/MathML" class="maruku-mathml" display="inline" id="mathml_2561b5b414e14b079ff2a2b15fb469479a45220e_5"><semantics><mrow><mstyle mathvariant="bold"><mi>B</mi></mstyle><mi>G</mi><mo>→</mo><mo>*</mo></mrow><annotation encoding="application/x-tex">\mathbf{B}G \to \ast</annotation></semantics></math></td><td style="text-align: left;"><a class="existingWikiWord" href="/nlab/show/homotopy+invariants">homotopy invariants</a>/<a class="existingWikiWord" href="/nlab/show/%E2%88%9E-group+cohomology">∞-group cohomology</a></td></tr>
-<tr><td style="text-align: left;"><a class="existingWikiWord" href="/nlab/show/dependent+product">dependent product</a> of <a class="existingWikiWord" href="/nlab/show/internal+hom">internal hom</a> along <math xmlns="http://www.w3.org/1998/Math/MathML" class="maruku-mathml" display="inline" id="mathml_2561b5b414e14b079ff2a2b15fb469479a45220e_6"><semantics><mrow><mstyle mathvariant="bold"><mi>B</mi></mstyle><mi>G</mi><mo>→</mo><mo>*</mo></mrow><annotation encoding="application/x-tex">\mathbf{B}G \to \ast</annotation></semantics></math></td><td style="text-align: left;"><a class="existingWikiWord" href="/nlab/show/equivariant+cohomology">equivariant cohomology</a></td></tr>
-<tr><td style="text-align: left;"><a class="existingWikiWord" href="/nlab/show/dependent+sum">dependent sum</a> along <math xmlns="http://www.w3.org/1998/Math/MathML" class="maruku-mathml" display="inline" id="mathml_2561b5b414e14b079ff2a2b15fb469479a45220e_7"><semantics><mrow><mstyle mathvariant="bold"><mi>B</mi></mstyle><mi>G</mi><mo>→</mo><mstyle mathvariant="bold"><mi>B</mi></mstyle><mi>H</mi></mrow><annotation encoding="application/x-tex">\mathbf{B}G \to \mathbf{B}H</annotation></semantics></math></td><td style="text-align: left;"><a class="existingWikiWord" href="/nlab/show/induced+representation">induced representation</a></td></tr>
-<tr><td style="text-align: left;"><a class="existingWikiWord" href="/nlab/show/context+extension">context extension</a> along <math xmlns="http://www.w3.org/1998/Math/MathML" class="maruku-mathml" display="inline" id="mathml_2561b5b414e14b079ff2a2b15fb469479a45220e_8"><semantics><mrow><mstyle mathvariant="bold"><mi>B</mi></mstyle><mi>G</mi><mo>→</mo><mstyle mathvariant="bold"><mi>B</mi></mstyle><mi>H</mi></mrow><annotation encoding="application/x-tex">\mathbf{B}G \to \mathbf{B}H</annotation></semantics></math></td><td style="text-align: left;"></td></tr>
-<tr><td style="text-align: left;"><a class="existingWikiWord" href="/nlab/show/dependent+product">dependent product</a> along <math xmlns="http://www.w3.org/1998/Math/MathML" class="maruku-mathml" display="inline" id="mathml_2561b5b414e14b079ff2a2b15fb469479a45220e_9"><semantics><mrow><mstyle mathvariant="bold"><mi>B</mi></mstyle><mi>G</mi><mo>→</mo><mstyle mathvariant="bold"><mi>B</mi></mstyle><mi>H</mi></mrow><annotation encoding="application/x-tex">\mathbf{B}G \to \mathbf{B}H</annotation></semantics></math></td><td style="text-align: left;"><a class="existingWikiWord" href="/nlab/show/coinduced+representation">coinduced representation</a></td></tr>
-<tr><td style="text-align: left;"><a class="existingWikiWord" href="/nlab/show/spectrum+object">spectrum object</a> in <a class="existingWikiWord" href="/nlab/show/context">context</a> <math xmlns="http://www.w3.org/1998/Math/MathML" class="maruku-mathml" display="inline" id="mathml_2561b5b414e14b079ff2a2b15fb469479a45220e_10"><semantics><mrow><mstyle mathvariant="bold"><mi>B</mi></mstyle><mi>G</mi></mrow><annotation encoding="application/x-tex">\mathbf{B}G</annotation></semantics></math></td><td style="text-align: left;"><a class="existingWikiWord" href="/nlab/show/spectrum+with+G-action">spectrum with G-action</a> (<a class="existingWikiWord" href="/nlab/show/naive+G-spectrum">naive G-spectrum</a>)</td></tr>
-</tbody></table></body></html>
+
+<h2 id="references">References</h2>
+
+<p>For instance</p>
+
+<ul>
+<li>João Pedro Martins dos Santos, Def. 3 in <em>Representation Theory of Symmetric Groups</em>, 2012 (<a href="https://www.math.tecnico.ulisboa.pt/~ggranja/joaopedro.pdf">pdf</a>)</li>
+</ul>
+</body></html>
 
 </div>
 
 <div class="revisedby">
   <p>
-  Last revised on September 11, 2018 at 13:20:26.
-  See the <a href="https://ncatlab.org/nlab/history/trivial representation" style="color: #005c19">history</a> of this page for a list of all contributions to it.
+  Created on September 11, 2018 at 13:18:01.
+  See the <a href="https://ncatlab.org/nlab/history/alternating representation" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/trivial+representation" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/trivial+representation/1" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1 revision)</span> | <a href="/nlab/show/diff/trivial+representation" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/trivial+representation" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
-  | <a href="https://ncatlab.org/nlab/show/trivial representation/cite" style="color: black">Cite</a>
+  <a href="/nlab/edit/alternating+representation" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a>
+  | <a href="https://ncatlab.org/nlab/show/alternating representation/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
-    <a href="/nlab/print/trivial+representation" accesskey="p" id="view_print" rel="nofollow">Print</a>
+    <a href="/nlab/print/alternating+representation" accesskey="p" id="view_print" rel="nofollow">Print</a>
     |
-    <a href="/nlab/tex/trivial+representation" id="view_tex" rel="nofollow">TeX</a>
+    <a href="/nlab/tex/alternating+representation" id="view_tex" rel="nofollow">TeX</a>
     |
-    <a href="/nlab/source/trivial+representation" id="view_source" rel="nofollow">Source</a>
+    <a href="/nlab/source/alternating+representation" id="view_source" rel="nofollow">Source</a>
   </span>
 
   
