--- a/pages/3485.html
+++ b/pages/3485.html
@@ -429,7 +429,7 @@ margin-left: 0em;
 
 <p>A <em>permutation representation</em> of <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>C</mi></mrow><annotation encoding="application/x-tex">C</annotation></semantics></math> is a <a class="existingWikiWord" href="/nlab/show/representation">representation</a> of <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>C</mi></mrow><annotation encoding="application/x-tex">C</annotation></semantics></math> on <a class="existingWikiWord" href="/nlab/show/Set">Set</a>, i.e. a <a class="existingWikiWord" href="/nlab/show/functor">functor</a> <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>C</mi><mo>→</mo><mo lspace="0em" rspace="thinmathspace">Set</mo></mrow><annotation encoding="application/x-tex">C \to \Set</annotation></semantics></math>, also called a <a class="existingWikiWord" href="/nlab/show/G-set">G-set</a>.</p>
 
-<p>A <em>linear permutation representation</em> is a functor <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>C</mi><mo>→</mo></mrow><annotation encoding="application/x-tex">C \to </annotation></semantics></math> <a class="existingWikiWord" href="/nlab/show/Vect">Vect</a> that factors through a permutation representation via the <a class="existingWikiWord" href="/nlab/show/free+functor">free functor</a> <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msup><mi>k</mi> <mrow><mo stretchy="false">|</mo><mo>−</mo><mo stretchy="false">|</mo></mrow></msup><mo lspace="verythinmathspace">:</mo><mi>Set</mi><mo>→</mo><mi>Vect</mi></mrow><annotation encoding="application/x-tex">k^{|-|}\colon  Set \to Vect</annotation></semantics></math> which sends a set to the vector space for which this set is a basis.</p>
+<p>A <em>linear permutation representation</em> is a functor <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>C</mi><mo>→</mo></mrow><annotation encoding="application/x-tex">C \to </annotation></semantics></math> <a class="existingWikiWord" href="/nlab/show/Vect">Vect</a> that factors through a permutation representation via the <a class="existingWikiWord" href="/nlab/show/free+functor">free functor</a> <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>k</mi><mo stretchy="false">[</mo><mo lspace="verythinmathspace" rspace="0em">−</mo><mo stretchy="false">]</mo><mo lspace="verythinmathspace">:</mo><mi>Set</mi><mo>→</mo><mi>Vect</mi></mrow><annotation encoding="application/x-tex">k[-]\colon  Set \to Vect</annotation></semantics></math> which sends a set to the vector space for which this set is a <a class="existingWikiWord" href="/nlab/show/linear+basis">linear basis</a>.</p>
 
 <div class="un_remark">
 <h6 id="warning">Warning</h6>
@@ -504,13 +504,13 @@ margin-left: 0em;
 </ol>
 
 <p>Then then map that sends a G-set to the corresponding linear permutation representation is a <a class="existingWikiWord" href="/nlab/show/strong+monoidal+functor">strong monoidal functor</a></p>
-<div class="maruku-equation"><math xmlns="http://www.w3.org/1998/Math/MathML" display="block" class="maruku-mathml"><semantics><mrow><mi>G</mi><mi>Set</mi><mo>⟶</mo><mi>G</mi><mi>Rep</mi></mrow><annotation encoding="application/x-tex">
-  G Set \longrightarrow G Rep
+<div class="maruku-equation"><math xmlns="http://www.w3.org/1998/Math/MathML" display="block" class="maruku-mathml"><semantics><mrow><mi>G</mi><mi>Set</mi><mover><mo>⟶</mo><mrow><mi>ℂ</mi><mo stretchy="false">[</mo><mo lspace="verythinmathspace" rspace="0em">−</mo><mo stretchy="false">]</mo></mrow></mover><mi>G</mi><mi>Rep</mi></mrow><annotation encoding="application/x-tex">
+  G Set \overset{\mathbb{C}[-]}{\longrightarrow} G Rep
 
 </annotation></semantics></math></div>
 <p>and hence induces a <a class="existingWikiWord" href="/nlab/show/ring+homomorphism">ring homomorphism</a></p>
-<div class="maruku-equation"><math xmlns="http://www.w3.org/1998/Math/MathML" display="block" class="maruku-mathml"><semantics><mrow><mi>A</mi><mo stretchy="false">(</mo><mi>G</mi><mo stretchy="false">)</mo><mo>⟶</mo><mi>R</mi><mo stretchy="false">(</mo><mi>G</mi><mo stretchy="false">)</mo></mrow><annotation encoding="application/x-tex">
-  A(G) \longrightarrow R(G)
+<div class="maruku-equation"><math xmlns="http://www.w3.org/1998/Math/MathML" display="block" class="maruku-mathml"><semantics><mrow><mi>A</mi><mo stretchy="false">(</mo><mi>G</mi><mo stretchy="false">)</mo><mover><mo>⟶</mo><mrow><mi>ℂ</mi><mo stretchy="false">[</mo><mo lspace="verythinmathspace" rspace="0em">−</mo><mo stretchy="false">]</mo></mrow></mover><mi>R</mi><mo stretchy="false">(</mo><mi>G</mi><mo stretchy="false">)</mo></mrow><annotation encoding="application/x-tex">
+  A(G) \overset{\mathbb{C}[-]}{\longrightarrow} R(G)
 
 </annotation></semantics></math></div>
 <p>Under the identitification</p>
@@ -542,6 +542,8 @@ margin-left: 0em;
 </annotation></semantics></math></div>
 <p>from the <a class="existingWikiWord" href="/nlab/show/sphere+spectrum">sphere spectrum</a> to <a class="existingWikiWord" href="/nlab/show/KU">KU</a>.</p>
 
+<p>For the example that <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>G</mi><mo>=</mo><msub><mi>S</mi> <mi>n</mi></msub></mrow><annotation encoding="application/x-tex">G = S_n</annotation></semantics></math> is a <a class="existingWikiWord" href="/nlab/show/symmetric+group">symmetric group</a>, this construction is analyzed in detail at <em><a href="Gram-Schmidt+process#CategorifiedGramSchmidtProcess">Categorified Gram-Schmidt process</a></em>.</p>
+
 <h2 id="related_entries">Related entries</h2>
 
 <ul>
@@ -567,7 +569,13 @@ margin-left: 0em;
 <h2 id="related_concepts">Related concepts</h2>
 
 <ul>
-<li><a class="existingWikiWord" href="/nlab/show/%E2%88%9E-permutation+representation">∞-permutation representation</a></li>
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/regular+representation">regular representation</a></p>
+</li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/%E2%88%9E-permutation+representation">∞-permutation representation</a></p>
+</li>
 </ul>
 </body></html>
 
@@ -575,14 +583,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on September 11, 2018 at 11:55:36.
+  Last revised on September 11, 2018 at 13:30:19.
   See the <a href="https://ncatlab.org/nlab/history/permutation representation" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/permutation+representation" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/permutation+representation/12" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(12 revisions)</span> | <a href="/nlab/show/diff/permutation+representation" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/permutation+representation" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/permutation+representation" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/permutation+representation/13" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(13 revisions)</span> | <a href="/nlab/show/diff/permutation+representation" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/permutation+representation" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/permutation representation/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
