--- a/pages/16425.html
+++ b/pages/16425.html
@@ -491,7 +491,7 @@ margin-left: 0em;
 </li>
 
 <li>
-<p>The alternating group <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msub><mi>A</mi> <mn>5</mn></msub></mrow><annotation encoding="application/x-tex">A_5</annotation></semantics></math> on five elements, of order <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mn>60</mn></mrow><annotation encoding="application/x-tex">60</annotation></semantics></math>, is the smallest nonabelian <a class="existingWikiWord" href="/nlab/show/simple+group">simple group</a>. Geometrically, it may be realized as a subgroup of <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>SO</mi><mo stretchy="false">(</mo><mn>3</mn><mo stretchy="false">)</mo></mrow><annotation encoding="application/x-tex">SO(3)</annotation></semantics></math> which carries a regular <a class="existingWikiWord" href="/nlab/show/icosahedron">icosahedron</a> into itself.</p>
+<p>The alternating group <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msub><mi>A</mi> <mn>5</mn></msub></mrow><annotation encoding="application/x-tex">A_5</annotation></semantics></math> on five elements, of order <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mn>60</mn></mrow><annotation encoding="application/x-tex">60</annotation></semantics></math>, is the smallest <a class="existingWikiWord" href="/nlab/show/nonabelian+group">nonabelian</a> <a class="existingWikiWord" href="/nlab/show/simple+group">simple group</a>. Geometrically, it may be realized as <a class="existingWikiWord" href="/nlab/show/finite+subgroup+of+SO%283%29">finite subgroup of SO(3)</a> which carries a regular <a class="existingWikiWord" href="/nlab/show/icosahedron">icosahedron</a> into itself: the <a class="existingWikiWord" href="/nlab/show/icosahedral+group">icosahedral group</a>.</p>
 </li>
 
 <li>
@@ -522,14 +522,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on September 11, 2018 at 13:18:56.
+  Last revised on September 11, 2018 at 14:34:46.
   See the <a href="https://ncatlab.org/nlab/history/alternating group" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/alternating+group" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/alternating+group/4" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(4 revisions)</span> | <a href="/nlab/show/diff/alternating+group" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/alternating+group" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/alternating+group" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/alternating+group/5" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(5 revisions)</span> | <a href="/nlab/show/diff/alternating+group" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/alternating+group" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/alternating group/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
